fixs the header vertical space on mobile devices (#795)
Fix #737.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -368,6 +368,9 @@ body {
         @include bootstrap.media-breakpoint-up(md) {
             margin: 2rem 0;
         }
+        @include bootstrap.media-breakpoint-down(xs) {
+            margin-top: 1.5rem;
+        }
     }
     &-utils {
         margin-top: 0.5rem;
@@ -378,9 +381,12 @@ body {
             font-weight: 600;
             font-size: 1.6rem;
             letter-spacing: 0;
-            width: 3.5rem;
+            width: 100%;
             @include bootstrap.media-breakpoint-up(md) {
                 font-size: 2rem;
+            }
+            @include bootstrap.media-breakpoint-down(xs) {
+                display: block;
             }
         }
         .Header-subtitle {
@@ -429,6 +435,12 @@ body {
                     color: #fff;
                 }
             }
+        }
+    }
+    .form-group {
+        @include bootstrap.media-breakpoint-down(sm) {
+            display: block;
+            margin: auto;    
         }
     }
 }
@@ -2285,4 +2297,11 @@ body {
 // FAQ section
 .faq {
     width: 45%;
+}
+
+#header-search a {
+    @include bootstrap.media-breakpoint-down(sm) {
+        display: block;
+        margin: auto;
+    }
 }
